# twitch_recoder

./: .gitignore  README.md  pyproject.toml
src/twitch_recoder/: README.md  __init__.py  cli.py  main.py
src/twitch_recoder/api/: twitch_api.py
src/twitch_recoder/common/: m3u8_parser.py  stream_sorter.py  taskManager.py  utils.py
src/twitch_recoder/config/: my_config.py
src/twitch_recoder/core/: process.py  recoder.py
src/twitch_recoder/types/: errors.py  typeinfo.py
